[project]
name = "warpernodes"
description = "NODES: DWPose Scaler (Warper)"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/AIWarper/ComfyUI-WarperNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-WarperNodes"
Icon = ""
